fix duplicate source compliance bug